# huggingface

./: MANIFEST.in  README.md  conftest.py  pyproject.toml  requirements.txt  setup.py
huggingface_training/: __init__.py  data.py  model.py  train.py  trainer.py
scripts/: print_tfevents.py  vertex_submit.py
tests/: __init__.py  run_tests.py  test_trainer.py
